--- a/src/shared/components/card-bar-evidencia/card-bar-evidencia.component.html
+++ b/src/shared/components/card-bar-evidencia/card-bar-evidencia.component.html
@@ -128,12 +128,12 @@
     </div>
    
   </div>
-  <div class="block w-full overflow-x-auto">
-      <table class="items-center w-full bg-transparent border-collapse">
-        <thead>
+  <div class="block w-full overflow-x-auto"> <!--etilo Yenni-->
+    <table class="items-center w-full bg-transparent border-collapse"><!--etilo Yenni-->
+      <thead class="table-header"><!--etilo Yenni-->
           <tr>
             <th class="table-header">
-              #
+              #   
             </th>
             
             <th class="table-header">
@@ -154,25 +154,25 @@
             </th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="custom-th"> <!--estilo Yenni-->
           <tr >
             <th
-              class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-semibold"
+              class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 "
             >
               1
             </th>
             <th
-              class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-semibold"
+              class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 "
             >
               Alejandro	Martinez	Hdez
             </th>
             <td
-              class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-semibold"
+              class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 "
             >
               Foto
             </td>
             <td
-              class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-semibold"
+              class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
             >
               Descripcion 1
             </td>
