--- a/src/shared/components/cards/card-areas/card-areas.component.html
+++ b/src/shared/components/cards/card-areas/card-areas.component.html
@@ -145,9 +145,9 @@
               </thead>
               <tbody class="custom-th">
                 <tr class="custom-tr" *ngFor="let areasadscripcion of areasadscripcion; let i = index" [ngClass]="{'bg-gray-100': i % 2 === 0, 'bg-white': i % 2 !== 0, 'custom-table-row': true}">
-                      <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-sm whitespace-nowrap p-4 font-semibold">{{ areasadscripcion.nombre }}</td>
-                      <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-sm whitespace-nowrap p-4 font-semibold">{{ areasadscripcion.descripcion }}</td>
-                      <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-sm whitespace-nowrap p-4 font-semibold">
+                      <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-sm whitespace-nowrap p-4 ">{{ areasadscripcion.nombre }}</td> <!--se quito el font-semibold YENNI-->
+                      <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-sm whitespace-nowrap p-4 ">{{ areasadscripcion.descripcion }}</td> <!--se quito el font-semibold YENNI-->
+                      <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-sm whitespace-nowrap p-4 "> <!--se quito el font-semibold YENNI-->
                           <ng-container *ngIf="areasadscripcion.estatus; else elseEST">
                               <span class="badge bg-success me-1"></span>Activo
                           </ng-container>
