--- a/src/shared/components/cards/card-social-traffic/card-social-traffic.component.html
+++ b/src/shared/components/cards/card-social-traffic/card-social-traffic.component.html
@@ -32,7 +32,7 @@
                             <div class=" modal-content py-4 text-left px-6">
                                 <div class="flex justify-between items-center pb-3">
                                     <div>
-                                        <p class="text-2xl font-bold -mr-56"> BENEFICIARIO </p>
+                                        <p class="text-2xl font-bold -mr-56"> Beneficiaria/Beneficiario </p> <!--se edito el texto YENNI-->
                                     </div>
                                     <div></div>
                                     <div>
@@ -50,7 +50,7 @@
                                     <form [formGroup]="SocialForm" (ngSubmit)="submit()">
                                         <div class="grid grid-cols-3 gap-4">
                                             <div>
-                                                <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlFor="nombre">Nombre(s)*:</label>
+                                                <label class="block  text-blueGray-600 text-xs font-bold mb-2" htmlFor="nombre">Nombre(s)*:</label> <!--se quito el uppercaseYENNI-->
                                                 <input required id="nombres" type="text" formControlName="nombres" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" value=""
                                                 />
                                                 <div *ngIf="SocialForm.get('Nombre')?.touched" class="error-message">
@@ -60,7 +60,7 @@
                                                 </div>
                                             </div>
                                             <div>
-                                                <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlFor="apellidoPaterno">Apellido paterno:</label>
+                                                <label class="block text-blueGray-600 text-xs font-bold mb-2" htmlFor="apellidoPaterno">Apellido paterno:</label>  <!--se quito el uppercaseYENNI-->
                                                 <input required id="apellidoPaterno" type="text" formControlName="apellidoPaterno" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
                                                     value="" />
                                                 <div *ngIf="SocialForm.get('apellidoPaterno')?.touched" class="error-message">
@@ -70,7 +70,7 @@
                                                 </div>
                                             </div>
                                             <div>
-                                                <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlFor="apellidoMaterno">Apellido materno:</label>
+                                                <label class="block text-blueGray-600 text-xs font-bold mb-2" htmlFor="apellidoMaterno">Apellido materno:</label> <!--se quito el uppercaseYENNI-->
                                                 <input required id="apellidoMaterno" type="text" formControlName="apellidoMaterno" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
                                                     value="" />
                                                 <div *ngIf="SocialForm.get('apellidoMaterno')?.touched" class="error-message">
@@ -83,7 +83,7 @@
                                         <br>
                                         <div class="grid grid-cols-3 gap-4">
                                             <div>
-                                                <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlFor="fechaNacimiento">Fecha de nacimiento*:</label>
+                                                <label class="block  text-blueGray-600 text-xs font-bold mb-2" htmlFor="fechaNacimiento">Fecha de nacimiento*:</label> <!--se quito el uppercaseYENNI-->
                                                 <input type="date" formControlName="fechaNacimiento" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" />
                                             </div>
                                             <div>
@@ -94,7 +94,7 @@
                                                 </div>
                                             </div>
                                             <div>
-                                                <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlFor="sexo">Género:</label>
+                                                <label class="block  text-blueGray-600 text-xs font-bold mb-2" htmlFor="sexo">Género:</label> <!--se quito el uppercaseYENNI-->
                                                 <select formControlName="sexo" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:focus:ring-blue-500 dark:focus:border-blue-500">
                                                   <option value="1">Masculino</option>
                                                   <option value="2">Femenino</option>
@@ -106,7 +106,7 @@
                                             <div class="col-span-1">
                                                 <div class="relative w-full mb-3">
                                                     <label class="lavel" htmlFor="grid-password">
-                                                    ESTATUS*
+                                                    Estatus*<!-- se modifico YENNI-->
                                                     </label>
                                                     <label class="relative inline-flex items-center cursor-pointer">
                                                     <input [(ngModel)]="toggleValue" type="checkbox" value="true" class="sr-only peer" formControlName="estatus" >
@@ -120,7 +120,7 @@
                                             </div>
                                             <div class="col-span-1">
                                                 <div class="relative w-full mb-3">
-                                                    <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlFor="municipio">Municipio*:</label>
+                                                    <label class="block text-blueGray-600 text-xs font-bold mb-2" htmlFor="municipio">Municipio*:</label> <!--se quito el uppercaseYENNI-->
                                                     <select formControlName="municipioId" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:focus:ring-blue-500 dark:focus:border-blue-500">
                                                       <option *ngFor="let option of municipiosOptions" [value]="option.id">{{ option.label }}</option>
                                                   </select>
@@ -128,7 +128,7 @@
                                             </div>
                                             <div class="col-span-2">
                                                 <div class="relative w-full mb-3">
-                                                    <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlFor="programaSocialId">Programa Social:</label>
+                                                    <label class="block  text-blueGray-600 text-xs font-bold mb-2" htmlFor="programaSocialId">Programa Social:</label> <!--se quito el uppercaseYENNI-->
                                                     <select formControlName="programaSocialId" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:focus:ring-blue-500 dark:focus:border-blue-500">
                                                     <option *ngFor="let option of programasOptions" [value]="option.id">{{ option.label }}</option>
                                                 </select>
@@ -139,7 +139,7 @@
                                         <div class="container">
                                             <div class="row">
                                                 <div class="col-md-3">
-                                                    <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" formControlName="domicilio">
+                                                    <label class="block  text-blueGray-600 text-xs font-bold mb-2" formControlName="domicilio"> <!--se quito el uppercaseYENNI-->
                                                   Ubicar en el mapa*:
                                                 </label>
                                                     <input id="searchInput" class="controls border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" type="text" placeholder="Enter a location"
@@ -173,23 +173,23 @@
             </div>
 
         </div>
-        <div class="block w-full overflow-x-auto">
+        <div class="block w-full overflow-x-auto">    <!-- ESTILO table YENNI-->
             <!-- Projects table -->
-            <table class="items-center w-full bg-transparent border-collapse mx-auto">
-                <thead>
+            <table class="items-center w-full bg-transparent border-collapse"> <!-- ESTILO table YENNI-->
+                <thead class="table-header"> <!-- ESTILO table YENNI-->
                     <tr>
-                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Nombre(s)</th>
-                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Apellido paterno</th>
-                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Apellido materno</th>
-                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Fecha de nacimiento</th>
-                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">CURP</th>
-                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Género</th>
-                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Dirección</th>
-                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Acciones</th>
+                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs  border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Nombre(s)</th>  <!--se quito el uppercaseYENNI-->
+                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs  border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Apellido paterno</th> <!--se quito el uppercaseYENNI-->
+                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs  border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Apellido materno</th> <!--se quito el uppercaseYENNI-->
+                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs  border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Fecha de nacimiento</th> <!--se quito el uppercaseYENNI-->
+                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs  border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">CURP</th> <!--se quito el uppercaseYENNI-->
+                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs  border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Género</th> <!--se quito el uppercaseYENNI-->
+                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs  border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Dirección</th> <!--se quito el uppercaseYENNI-->
+                        <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs  border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Acciones</th> <!--se quito el uppercaseYENNI-->
                     </tr>
                 </thead>
-                <tbody>
-                    <tr *ngFor="let beneficiario of beneficiarios">
+                <tbody class="custom-th"><!-- ESTILO table YENNI-->
+                    <tr class="custom-tr" *ngFor="let beneficiario of beneficiarios; let i = index"  [ngClass]="{'bg-gray-100': i % 2 === 0, 'bg-white': i % 2 !== 0, 'custom-table-row': true}"><!-- ESTILO table YENNI-->
                         <td>{{ beneficiario.nombres }}</td>
                         <td>{{ beneficiario.apellidoPaterno }}</td>
                         <td>{{ beneficiario.apellidoMaterno }}</td>
