--- a/src/shared/components/cards/card-areas/card-areas.component.css
+++ b/src/shared/components/cards/card-areas/card-areas.component.css
@@ -114,12 +114,13 @@ body {
     background-color: #4f0d6b;
     color: #ffffff; 
     height: 32px;
+    text-align: middle;
   }
   
   
   .table-cell {
     padding: 0.75rem; 
-    text-align: left;
+    text-align: middle;
     font-size: 0.75rem;
     white-space: nowrap; 
   }
@@ -130,6 +131,7 @@ body {
     font-size: 0.5rem;
     font-weight: bold;
     padding: 4px;
+
   }
   
   .custom-table-row {
@@ -143,7 +145,7 @@ body {
     border-top: 0;
     padding-left: 6px;
     vertical-align: middle;
-    border-left: 0;
+    border-left: 0; 
     height: 42px;
     border-right: 0;
     font-size: 0.90rem; 
