--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
+@import "~@ng-select/ng-select/themes/default.theme.css";
 /* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 body {
     margin: 0;
     padding: 0;
