--- a/src/shared/components/cards/card-areas/card-areas.component.html
+++ b/src/shared/components/cards/card-areas/card-areas.component.html
@@ -117,7 +117,11 @@
                                       <div class="flex justify-between">
                                           <div></div>
                                           <div>
-                                              <button type="submit" class="justify-center w-20 bg-purple-900 text-white py-2  rounded-md hover:bg-red-950">{{ isUpdating ? "Actualizar " : "AGREGAR " }}</button>
+                                              <button type="submit"
+                                              [disabled]="!AreaForm.valid"
+                                              [ngClass]="{'bg-gray-500': !AreaForm.valid, 'bg-purple-900': AreaForm.valid}"
+                                              class="text-white py-2 px-4 rounded-md hover:bg-red-950 custom-button">
+                                              {{ isUpdating ? "Actualizar " : "Agregar " }}</button>
                                           </div>
                                       </div>
                                   </form>
