--- a/src/shared/components/cards/card-areas/card-areas.component.css
+++ b/src/shared/components/cards/card-areas/card-areas.component.css
@@ -3,7 +3,10 @@ body {
     color: #1a202c;
     font-family: 'sans-serif';
 }
-
+.modal-container {
+    margin-top: 4%; 
+    padding-bottom: 10px;
+  }
 .container {
     margin-left: auto;
     margin-right: auto;
