--- a/src/shared/components/cards/card-page-visits/card-page-visits.component.html
+++ b/src/shared/components/cards/card-page-visits/card-page-visits.component.html
@@ -216,7 +216,7 @@
                                       <div></div>
                                       <div>
                                         <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950">
-                                          {{ isUpdating ? "ACTUALIZAR " : "AGREGAR " }}
+                                          {{ isUpdating ? "Actualizar " : "Agregar " }}
                                         </button>              </div>
                                     </div>
         </form>
@@ -237,13 +237,13 @@
           <table class="items-center w-full bg-transparent border-collapse">
             <thead class="table-header">
                   <tr>
-                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Nombre</th>
-                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Apellido Paterno</th>
-                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Apellido Materno</th>
-                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Correo</th>
-                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Rol</th>
-                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Estatus</th>
-                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">Acciones</th>
+                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-center">Nombre</th>
+                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-center">Apellido Paterno</th>
+                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-center">Apellido Materno</th>
+                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-center">Correo</th>
+                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-center">Rol</th>
+                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-center">Estatus</th>
+                      <th class="table-header px-6 bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs border-l-0 border-r-0 whitespace-nowrap font-semibold text-center">Acciones</th>
                   </tr>
               </thead>
               <tbody class="custom-th">
