--- a/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.html
+++ b/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.html
@@ -83,7 +83,7 @@
                         <div>
                           <img class="img" *ngIf="EvidenciaForm.get('Foto')?.value" [src]="EvidenciaForm.get('Foto')?.value" width="50%" height="50%" alt="Vista previa de la imagen">
 
-                          <label for="Foto" class="lavel">Evidencia fotografica*:</label>
+                          <label for="Foto" class="lavel">Evidencia fotográfica*:</label>
                           <input class="input" type="file" (change)="onFileChange($event)" formControlName="Foto">
                           
                           <div *ngIf="EvidenciaForm.get('Foto')?.touched" class="error-message">
@@ -93,7 +93,7 @@
                           </div> 
                         </div>
                         <div>
-                          <label for="Descripcion" class="lavel">Descripcion*:</label>
+                          <label for="Descripcion" class="lavel">Descripción*:</label>
                               <textarea id="Descripcion" name="Descripcion" rows="2" class="custom-textarea" formControlName="Descripcion"></textarea>                                       
                               <div *ngIf="EvidenciaForm.get('Descripcion')?.touched" class="error-message">
                                   <div *ngIf="EvidenciaForm.get('Descripcion')?.hasError('required')">
@@ -144,7 +144,7 @@
           <th
           class="table-header"
           >
-              Descripcion
+              Descripción
           </th>
           <th
           class="table-header"
@@ -154,10 +154,9 @@
         </tr>
       </thead>
       <tbody class="custom-th">
-      <tr>
-        <!--
-        <tr class="custom-tr" *ngFor="let usuario of usuarios; let i = index" [ngClass]="{'bg-gray-100': i % 2 === 0, 'bg-white': i % 2 !== 0, 'custom-table-row': true}"></tr>
-      -- estilo de tabla colores al pasar el cursor -->  
+      
+      
+        <tr class="custom-tr">
         <th
             class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
           >
@@ -165,7 +164,7 @@
           </th>
           <th
             class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
-          >
+          > 
             Alejandro	Martinez	Hdez
           </th>
           <td
@@ -176,7 +175,7 @@
           <td
             class="border-t-0 px-6 align-middle text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
           >
-            Descripcion 1
+            Descripción 1
           </td>
           <td
             class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
@@ -202,7 +201,52 @@
           </td>
 
         </tr>
-        
+        <!--  <tr class="custom-tr" *ngFor="let beneficiario of beneficiarios; let i = index"  [ngClass]="{'bg-gray-100': i % 2 === 0, 'bg-white': i % 2 !== 0, 'custom-table-row': true}">ESTILO table YENNI-->
+        <tr class="custom-tr">
+          <th
+              class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
+            >
+              2
+            </th>
+            <th
+              class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
+            > 
+              prueba
+            </th>
+            <td
+              class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
+            >
+              Foto
+            </td>
+            <td
+              class="border-t-0 px-6 align-middle text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
+            >
+              Descripción 1
+            </td>
+            <td
+              class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
+            >
+            <button >
+              <svg xmlns="http://www.w3.org/2000/svg"  text-center class="icon icon-tabler icon-tabler-trash" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M4 7l16 0" />
+                <path d="M10 11l0 6" />
+                <path d="M14 11l0 6" />
+                <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" />
+                <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />
+              </svg>
+            </button>
+            <button class="ml-4" >
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" />
+                <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" />
+                <path d="M16 5l3 3" />
+              </svg>
+            </button>
+            </td>
+  
+          </tr>
       </tbody>
     </table>
 
