--- a/src/shared/components/modal-beneficiario/modal-beneficiario.component.html
+++ b/src/shared/components/modal-beneficiario/modal-beneficiario.component.html
@@ -145,7 +145,7 @@
               <div class="w-full lg:w-6/12 px-4">
                 <div class="relative w-full mb-3">
                   <label
-                    class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
+                    class="block text-blueGray-600 text-xs font-bold mb-2"
                     htmlFor="grid-password"
                   >
                     Estatus
