--- a/src/shared/components/cards/card-bar-mapa/card-bar-mapa.component.html
+++ b/src/shared/components/cards/card-bar-mapa/card-bar-mapa.component.html
@@ -11,5 +11,18 @@
         ></div>
       </div>
     </div>
-
+    <div class="max-w-sm mx-auto bg-white rounded overflow-hidden shadow-lg my-4" style="
+    border-right-width: 10px; width: 250px; height:60px;" *ngFor="let programa of prograsmasocial;">
+      <div class="px-6 py-4 text-center">
+        <div class="mb-2">
+          <div class="flex items-center justify-center">
+            <div class="color-circle h-8 w-8 mr-3" [style.backgroundColor]="programa.color"></div>
+            <div>
+              <div class="font-bold text-xl">{{ programa.nombre }}</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
     
