--- a/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.html
+++ b/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.html
@@ -130,7 +130,7 @@
 <div class="block w-full overflow-x-auto">
     <table class="items-center w-full bg-transparent border-collapse">
       <thead class="table-header">
-        <tr>
+        <tr style="font-size: .3cm;">
           <th class="table-header">
             #
           </th>
